# CRYSTALYST

./: .gitignore  ABOUT_CRYSTALYST.md  CHANGELOGS.md  Cargo.toml  KNOWN-ISSUES.md  PRERELEASE-TESTING.md  README.md  THREAT-MODEL.md  atomcrypte_threat_model.md
Examples/: gpu.rs  machine-nonce.rs  machine-only password.rs  normal.rs  profile.rs
TEST_SUITES/: OVERALL_SCORE.md
TEST_SUITES/Dieharder/: RESULTS.md  TEST_ENVIROMENT.md
TEST_SUITES/NIST SP 800-22/: RESULT.md  TEST_ENVIROMENT.md  finalAnalysisReport.txt  freq.txt
src/: gpu.rs  kyber.rs  lib.rs  main.rs
src/cipher/: block_cipher.rs  mod.rs  stream_cipher.rs
src/engine/: atom_gpu.cl  cache_warmup.rs  engine.rs  gpu_backend.rs  mod.rs  simd.rs
src/rng_utils/: mod.rs  nonce.rs  rng.rs  salt.rs
src/utils/: base_utils.rs  calculate.rs  kyber.rs  mod.rs
