[package]
name = "atomcrypte"
version = "0.6.0"
edition = "2024"
description = "A modern, flexible and 'EXPERIMENTAL' cryptographic library for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Metehan120/AtomCrypte"
keywords = ["encryption", "crypto", "secure", "rust", "flex"]

[dependencies]
rand = "0.9"
blake3 = "1.8"
rayon = "1"
subtle = "2.6"
thiserror = "2.0"
num_cpus = "1"
argon2 = "0.5"
zeroize = "1.8"
whoami = "1.6"
sha3 = "0.10"
base64 = "0.22"
hmac = "0.12"
sysinfo = "0.35.2"
bytemuck = "1.23"
tss-esapi = "7.6.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
