[package]
name = "crystalyst-rs"
version = "0.8.3"
edition = "2024"
description = "A modern, flexible and 'EXPERIMENTAL' cryptographic library for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Metehan120/CRYSTALYST"
keywords = ["encryption", "cryptography", "security", "hardware", "flexible"]
categories = [
    "cryptography",
    "algorithms",
    "hardware-support",
    "authentication",
]
exclude = ["TEST_SUITES/output.bin"]

[dependencies]
rand = "=0.8.5"
rand_core = { version = "=0.6.4", features = ["std"] }
rayon = "1"
subtle = "2.6"
thiserror = "2.0"
num_cpus = "1"
argon2 = "0.5"
zeroize = "1.8"
whoami = "1.6"
sha3 = "0.10"
base64 = "0.22"
hmac = "0.12"
sysinfo = "0.35.2"
bytemuck = "1.23"
tss-esapi = "7.6.0"
secrecy = "0.10.3"
pqc_kyber = { version = "0.7.1", features = ["kyber512", "std", "zeroize"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
